<resources>
    <string name="app_name">Translatro</string>
    <string name="add_your_text_here">Add your text here :</string>
    <string name="text">Text</string>
    <string name="add">Add</string>
    <string name="add_phrases">Add Phrases</string>
    <string name="display_phrases">Display Phrases</string>
    <string name="edit_phrases">Edit Phrases</string>
    <string name="language_subscription">Language Subscription</string>
    <string name="translate">Translate</string>
    <string name="saved_translations">Saved Translations</string>
    <string name="enter_your_text">Enter your text</string>
    <string name="all_available_phrases">All available phrases :</string>
    <string name="ok">OK</string>
    <string name="edit">Edit</string>
    <string name="enter_new_phrase">Enter new phrase</string>
    <string name="save">Save</string>
    <string name="upgrade">Update</string>
    <string name="select_language">Select language :</string>
    <string name="select_phrase">Select phrase :</string>
    <string name="logo">logo</string>
    <string name="language_translator_url">https://api.eu-gb.language-translator.watson.cloud.ibm.com/instances/fe16b874-1679-4207-bec3-6d1a3e3918eb</string>
    <string name="language_translator_apikey">gSWZ9iTtoJRmUNYn3c6JPRta2OIzP21DKANjW0iWoyA7</string>
    <string name="text_speech_apikey">BWQaXB9XxRkziP8ih5Z8rL2MXaO9SDbXv2nPr5Br7nIQ</string>
    <string name="text_speech_url">https://api.eu-gb.text-to-speech.watson.cloud.ibm.com/instances/b0d06307-679d-41cc-990a-6f2f9dc25db8</string>
    <string name="select_language_text">Select Language :</string>
    <string name="get">Get</string>
    <string name="english">English</string>
    <string name="pronounce">Pronounce</string>
    <string name="english_">English :</string>
    <string name="cantTranslate">INTERNET CONNECTION LOST!! Translate functionality is unavailable!!</string>
    <string name="cantPronounce">INTERNET CONNECTION LOST!! Pronounce functionality is unavailable!!</string>
    <string name="noConn">NO CONNECTION, some features are unavailable!! Please connect and restart for full experience!!</string>
</resources>
